Add a basic rw-register for Kudu
This adds a basic rw register test that constantly mutates a single
row on a replicated tablet while performing snapshot scans.